# GitReporter

./: .gitignore  README.md  build.sh  example_config.json  main.py  pyproject.toml  requirements.txt
src/GitReporter/: commit.py  config.py  diff.py  file.py  html_report.py  report.py  repository.py  repository_statistic.py  textline.py  types.py
src/gitreporter/: __main__.py  commit.py  commit_statistic.py  config.py  diff.py  progressbar.py  report.py  repository.py  repository_statistic.py  statistic_values.py
src/gitreporter/templates/: report_template.mustache
test-definitions/basic-test/: config.json  init.sh  version2.c
test-definitions/demonstration-repo/: config.json  init.sh  version1.c  version2.c
test-definitions/multiline-string/: config.json  init.sh  version1.c  version2.c
web/templates/: report_template.mustache
