[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gitreporter"
version = "0.2.13"
authors = [
  { name="Michael Guttmann", email="michael.guttmann@live.at" },
]
description = "Git Analysis Tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "chevron>=0.14.0",
  "gitdb>=4.0.11",
  "GitPython>=3.1.41",
  "Pygments>=2.17.2",
  "smmap>=5.0.1"
]
classifiers = [
    "Programming Language :: Python :: 3"
]

[project.urls]
Homepage = "https://github.com/Migutti/GitReporter"

[tool.setuptools.package-data]
"gitreporter.templates" = ["*.mustache"]

[project.scripts]
gitreporter = "gitreporter.__main__:main"
